# claude-code-network-analytics

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: network-analyst.md  security-auditor.md
commands/: net-report.md  network-scan.md  security-check.md  topology-map.md  traffic-capture.md
hooks/: validate-target.sh
mcp/configs/: claude-code.json  claude-desktop.json
mcp/netanalytics-mcp/: README.md  pyproject.toml
mcp/netanalytics-mcp/netanalytics_mcp/: __init__.py  server.py
mcp/netanalytics-mcp/netanalytics_mcp/resources/: __init__.py
mcp/netanalytics-mcp/netanalytics_mcp/tools/: __init__.py  bandwidth.py  benchmark.py  discovery.py  packet_tools.py  path_analysis.py  reporting.py  security.py  smarthome.py  topology.py  traffic.py
scripts/: bench.py  check-permissions.sh  doctor.py  install-deps.sh  install-mcp.sh  pcap-summarize.py  report-batch.py  sample-data.py  update-oui.py
skills/network-scanning/: README.md
skills/topology-analysis/: README.md
skills/traffic-analysis/: README.md
src/netanalytics/: __init__.py  cli.py
src/netanalytics/core/: __init__.py  config.py  exceptions.py  utils.py
src/netanalytics/discovery/: __init__.py  arp_scan.py  icmp_scan.py  port_scan.py  service_detect.py
src/netanalytics/output/: __init__.py  export.py  reports.py
src/netanalytics/security/: __init__.py  assessment.py  risks.py  vulnerabilities.py
src/netanalytics/smarthome/: __init__.py  cloud.py  devices.py  discovery.py  xiaomi.py
src/netanalytics/topology/: __init__.py  builder.py  metrics.py  visualizer.py
src/netanalytics/traffic/: __init__.py  analyzer.py  capture.py  protocols.py
src/netanalytics/wrappers/: __init__.py  bandwidth_wrapper.py  iperf_wrapper.py  ncat_wrapper.py  nmap_wrapper.py  packet_tools_wrapper.py  path_wrapper.py  tshark_wrapper.py
tests/: __init__.py  test_core.py  test_discovery.py  test_security.py  test_smarthome.py  test_topology.py
