[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "netanalytics"
version = "0.1.0"
description = "Network Analytics Toolkit - Discovery, scanning, traffic analysis, and topology mapping"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Network Analytics Team"}
]
keywords = ["network", "security", "scanning", "topology", "traffic-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: Security",
]
dependencies = [
    "networkx>=3.6.1",
    "scapy>=2.7.0",
    "python-nmap>=0.7.1",
    "pyshark>=0.6",
    "psutil>=7.2.1",
    "click>=8.3.1",
    "rich>=14.2.0",
    "matplotlib>=3.10.0",
    "jinja2>=3.1.6",
    "python-miio>=0.5.12",
    "zeroconf>=0.136.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]

[project.scripts]
netanalytics = "netanalytics.cli:main"

[project.urls]
Homepage = "https://github.com/netanalytics/claude-code-network-analytics"
Documentation = "https://github.com/netanalytics/claude-code-network-analytics#readme"
Repository = "https://github.com/netanalytics/claude-code-network-analytics"

[tool.hatch.build.targets.wheel]
packages = ["src/netanalytics"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Template strings in reports.py contain HTML/Markdown that cannot be split
"src/netanalytics/output/reports.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
]
